# biosecure-bagel

./: .gitignore  pyproject.toml
scripts/: generate_reference_embeddings.py  run_overnight.sh  smoke_test_modal.py  validate_aggregation_screen.py
scripts/hallucination/: annealing.py  tempering.py
scripts/overnight/: pp_extended_templates.py  pp_screening_batch.py  stress_test_triage.py  validate_full_signals.py
src/bagel/screening/: __init__.py  pathogenic_potential.py  robustness.py  signals.py  tps.py  triage.py
src/bagel/screening/data/: reference_embeddings.npy  reference_sequences.py
tests/unit_tests/: test_screening_pp.py  test_screening_robustness.py  test_screening_signals.py  test_screening_tps.py  test_screening_triage.py
validation/: aggregation_dataset.py
validation/results/: metrics.csv  pp_auroc.csv  pp_scores.csv  scores.csv
